--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1, minimum-scale=1" name="viewport">
-  <link href="assets/images/ico.jpg-128x128.jpg" rel="shortcut icon" type="image/x-icon">
+  <link href="static/picture/ico.jpg-128x128.jpg" rel="shortcut icon" type="image/x-icon">
   <meta name="referrer" content="no-referrer">
   <meta content="Human Capital Professionalsへのご連絡はこちらから。ご質問・ご意見は専用フォームより受け付けております。所在地・電話番号・メールアドレスなどの情報も掲載。" name="description">
   <title>Human Capital Professionals | お問い合わせ</title>
-  <link href="static/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="static/css/style.css" rel="stylesheet">
   <link href="static/css/styles.css" rel="stylesheet">
   <link href="static/css/style1.css" rel="stylesheet">
@@ -133,11 +133,12 @@
         </div>
     </div>
 </section>
-<script src="static/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="static/js/navbar-dropdown.js"></script>
 <script src="static/js/form.js"></script>
 <script defer src="static/js/vcd15cbe7772f49c399c6a5babf22c1241717689176015.js" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"eabab26ea17340adb0f37872185dd59b","r":1,"server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
