--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1, minimum-scale=1" name="viewport">
-  <link href="assets/images/ico.jpg-128x128.jpg" rel="shortcut icon" type="image/x-icon">
+  <link href="static/picture/ico.jpg-128x128.jpg" rel="shortcut icon" type="image/x-icon">
   <meta name="referrer" content="no-referrer">
   <meta name="description" content="Human Capital Professionals は、株式やマーケットに関する基礎情報や解説を中立的にわかりやすく提供するブログです。投資判断を促すものではなく、学習や情報整理のための参考コンテンツを掲載しています。">
   <title>Human Capital Professionals | 株式情報ブログ（中立的な解説）</title>
 
   <!-- 样式表（保持原有引用以便于替换） -->
   <link href="static/css/template2.css" rel="stylesheet">
-  <link href="static/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="static/css/style.css" rel="stylesheet">
   <link href="static/css/styles.css" rel="stylesheet">
   <link href="static/css/style1.css" rel="stylesheet">
@@ -301,7 +301,7 @@
 
   <!-- 脚本（保留原有引入，便于本地测试） -->
   <script src="static/js/cookie.js"></script>
-  <script src="static/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="static/js/navbar-dropdown.js"></script>
   <script defer src="static/js/vcd15cbe7772f49c399c6a5babf22c1241717689176015.js" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"eabab26ea17340adb0f37872185dd59b","r":1,"server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
 
@@ -318,5 +318,6 @@
   </script>
 </body>
 </html>
+
 
 
